# ComfyUI-3D-Pack

./: .gitignore  DOCKER_INSTRUCTIONS.md  Dockerfile  LICENSE  README.md  _.txt  __init__.py  docker-compose.yml  install.bat  install.py  install_miniconda.bat  install_windows_portable_win_py310_cu121.bat  install_windows_portable_win_py311_cu121.bat  install_windows_portable_win_py312_cu121.bat  loadmesh.py  my-reqs.txt  nodes.py  nodes_partpacker_only.py  pyproject.toml  requirements.txt  requirements_post.txt  requirements_post_win_py310_cu121.txt  requirements_post_win_py311_cu121.txt  requirements_post_win_py312_cu121.txt  stablegen_nodes.py  test.bat  utils.py
.github/: FUNDING.yml
Configs/: Craftsman_config.yaml  Hunyuan3D_V1_svrm_config.yaml  StableFast3D_config.yaml  TriplaneGaussian_config.yaml  TripoSR_config.yaml  Wonder3D_config.yaml  system.conf
Gen_3D_Modules/Hunyuan3D_2_1/hy3dpaint/mesh_inpaint_wheel/: MANIFEST.in  pyproject.toml  setup.py
Gen_3D_Modules/Hunyuan3D_2_1/hy3dpaint/mesh_inpaint_wheel/mesh_inpaint_processor/: __init__.py
PartPacker/: PartPacker_node.py  __init__.py
_Example_Workflows/: 3DGS_Multi-View_Renders_to_ply.json  3DGS_Multi-View_Renders_to_ply_with_Stack_Orbit_Cam_Poses_node.json  Bake_Multi-View-Renders_into_UV_Texture.json  CRM MVDiffusion_to_InstantMesh.json  CRM_Img_to_Multi-views_to_CCMs_to_Mesh.json  Era3D_to_InstantMesh.json  Hunyuan3D_V2.json  Hunyuan3D_V2_Turbo.json  Hunyuan3D_V2_Turbo_MV.json  Images_to_3DGS_to_DMTetMesh.json  Large_Multiview_Gaussian_Model_to_3DGS and_3DMesh.json  Load_3DGS_to_DMTetMesh.json  MV-Adapter-ig2mv.json  MVDream_to_Large_Multiview_Gaussian_Model_to_3DGS and_3DMesh.json  Multi-View-Images_to_3DGS_to_3DMesh(DMTet and DiffRast).json  Multi-View-Images_to_Instant-NGP_to_3DMesh.json  Multi-View-Images_to_Instant-NGP_to_DiffRast_to_3DMesh.json  PartCrafter.json  Render_Mesh_and_3DGS_Example.json  Stable3DGen.json  StableFast3D_to_Mesh.json  Trellis_Image_to_Mesh.json  Triplane_Gaussian_Transformers_to_3DGS(DMTet and DiffRast).json  Triplane_Gaussian_Transformers_to_3DGS.json  Triplane_Gaussian_Transformers_to_3DGS_and_3DMesh.json  Using_Stack_Orbit_Camera_Poses_to_conditioning_StableZero123.json  Wonder3D_to_Large_Multiview_Gaussian_Model_to_3DGS and_3DMesh.json  Wonder3D_to_NeuS_to_Mesh.json  Zero123Plus_to_InstantMesh.json
_New_ComfyUI_Bats/: run_nvidia_gpu_miniconda.bat
_Pre_Builds/: README.md
_Wheels_win_py311_cu121/: diff_gaussian_rasterization-0.0.0-cp311-cp311-win_amd64.whl  nvdiffrast-0.3.1-py3-none-any.whl  torchmcubes-0.1.0-cp311-cp311-win_amd64.whl
algorithms/: Instant_NGP.py  NeuS_runner.py  _Test.py  convolutional_reconstruction_model.py  diff_mesh.py  diff_mesh_renderer.py  diff_texturing.py  dmtet.py  dmtet_network.py  flexicubes_renderer.py  flexicubes_trainer.py  gaussian_model.txt  large_multiview_gaussian_model.py  main_3DGS.py  main_3DGS_renderer.py  metrics_utils.py  nerf_marching_cubes_converter.py  triplane_gaussian_transformers.py
configs/: NeuS.conf  era3d_config.yaml  system.conf  tgs_config.yaml  tsr_config.yaml
diff_rast/: diff_mesh_renderer.py  diff_texturing.py
example_workflows/: Era3D_to_InstantMesh.json  Hunyuan3D_V1.json  Multi-View-Images_to_Instant-NGP_to_DiffRast_to_3DMesh.json  Render_Mesh_and_3DGS_Example.json  Trellis_Image_to_Mesh.json  TripoSG_Scribble_Model.json  TripoSG_to_Mesh.json  TripoSR_to_Mesh.json  Using_Stack_Orbit_Camera_Poses_to_conditioning_StableZero123.json  Wonder3D_to_Large_Multiview_Gaussian_Model_to_3DGS and_3DMesh.json  Zero123Plus_to_InstantMesh.json  [FlexiCubes] Multi-View Depth plus Optional Normal maps to 3D Mesh.json
flexicubes/: loss.py  util.py
gaussian_splatting/: main_3DGS.py  main_3DGS_renderer.py
instant_mesh/: model.py  model_mesh.py
mesh_processer/: mesh.py  mesh_utils.py
(+970 files in other folders)
