[project]
name = "ComfyUI-3D-Pack"description = "Make ComfyUI generates 3D assets as good & convenient as it generates image/video! This is an extensive node suite that enables ComfyUI to process 3D inputs (Mesh & UV Texture, etc.) using cutting edge algorithms (3DGS, NeRF, etc.) and models (InstantMesh, CRM, TripoSR, etc.) Note: There are many CUDA library that need to be installed correctly, please check [Install Instruction](https://github.com/MrForExample/ComfyUI-3D-Pack?tab=readme-ov-file#install)"
version = "0.0.2"
license = "LICENSE"
dependencies = ["cmake", "ninja", "numpy", "einops", "scipy", "kornia", "opencv-python", "pillow", "roma", "nerfacc>=0.5.3", "PyMCubes", "scikit-learn", "diffusers>=0.26.1", "transformers>=4.36.2", "safetensors", "open_clip_torch", "torchmetrics", "pytorch_msssim", "pytorch-lightning", "imageio", "imageio-ffmpeg", "matplotlib", "trimesh", "plyfile", "pygltflib", "xatlas", "pymeshlab", "torchtyping", "tqdm", "jaxtyping", "packaging", "OmegaConf", "pyhocon"]

[project.urls]
Repository = "https://github.com/MrForExample/ComfyUI-3D-Pack"

[tool.comfy]
PublisherId = "mr-for-example"
DisplayName = "ComfyUI-3D-Pack"
Icon = ""
