[project]
name = "ComfyUI-3D-Pack"
description = "Make ComfyUI generates 3D assets as good & convenient as it generates image/video!"
version = "0.1.6"
license = { file = "LICENSE" }
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/MrForExample/ComfyUI-3D-Pack"

[tool.comfy]
PublisherId = "mr-for-example"
DisplayName = "ComfyUI-3D-Pack"
Icon = ""
